--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: white;
+    background-color: #ffffff;
     z-index: 1;
-    box-shadow: 0 2px 5px black;
+    box-shadow: 0 2px 5px #000000;
 }
 
 .search-bar {
@@ -21,14 +21,14 @@ header {
     align-items: center;
     padding: 10px;
     text-align: center;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid #D3D3D3;
 }
 
 .search-bar input {
     flex: 1;
     padding: 8px 10px 8px 30px; 
     height: 25px;
-    border: 1px solid lightgray;
+    border: 1px solid #D3D3D3;
     border-radius: 30px;
     outline: none;
     margin-left: 10px;
@@ -37,7 +37,7 @@ header {
 .search-bar i {
     position: absolute;
     margin-left: 20px; 
-    color: black;
+    color: #000000;
 }
 
 .search-filters {
@@ -48,14 +48,14 @@ header {
 }
 
 ::placeholder {
-    color: black;
+    color: #000000;
 }
 
 .header-nav {
     position: fixed;
     top: 55px;
     width: 100%;
-    background-color: white;
+    background-color: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1;
     padding: 10px 0;
@@ -66,7 +66,7 @@ header {
 .header-nav-icon {
     text-align: center;
     font-size: 13px;
-    color: black;
+    color: 000000;
 }
 
 .header-nav-icon img {
@@ -81,7 +81,7 @@ header {
     position: fixed;
     bottom: 0; 
     width: 100%;
-    background-color: white; 
+    background-color: #ffffff; 
     padding: 10px 0; 
     text-align: center; 
     z-index: 1; 
@@ -109,7 +109,7 @@ header {
     }
     
 .explore-nav {
-    color: red !important;
+    color: #FF0000 !important;
     }
     
 main {
@@ -133,7 +133,7 @@ main {
     position: absolute;
     top: 10px;
     left: 10px;
-    background-color: white;
+    background-color: #ffffff;
     padding: 5px 10px;
     border-radius: 5px;
     font-size: 12px;
@@ -195,7 +195,7 @@ section {
 }
 
 .tab-active {
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #000000;
 }
 
 hr.solid {
